fixed problems pointed out in feedback (spacing issues)

--- a/style.css
+++ b/style.css
@@ -3,14 +3,20 @@
   max-width: 500px;
 }
 
-h1, .tagline {
+h1 {
   text-align: center;
+  margin-bottom: 0px;
+}
+
+.tagline {
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .city-description {
   font-size: 15px;
   font-style: normal;
-  margin-left: 30px;
+  margin-left: 20px;
 }
 
 body {
@@ -21,20 +27,21 @@ body {
 img {
   height: 50px;
   width: 50px;
-  margin: 7px;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 header, section {
   background-color: white;
   margin-top: 20px;
-  padding: 30px;
+  padding: 10px 30px 20px 30px;
 }
 
 h2 {
   border-bottom-style: solid;
   border-bottom-color: #DCB287;
   border-bottom-width: 2px;
-  padding-bottom: 20px;
+  padding-bottom: 15px;
 }
 
 a {
